--- a/taxii_service/templates/taxii_agent_results.html
+++ b/taxii_service/templates/taxii_agent_results.html
@@ -42,7 +42,7 @@
                     <ul>
                     {% for event in result.Event %}
                         <li>
-                            <a href="{% url 'crits.core.views.details' 'Event' event.0 %}">{{ event.1 }}</a>
+                            <a href="{% url 'crits-core-views-details' 'Event' event.0 %}">{{ event.1 }}</a>
                         </li>
                     {% endfor %}
                     </ul>
@@ -54,7 +54,7 @@
                     <ul>
                     {% for certificate in result.Certificate %}
                         <li>
-                            <a href="{% url 'crits.core.views.details' 'Certificate' certificate.0 %}">{{ certificate.1 }}</a>
+                            <a href="{% url 'crits-core-views-details' 'Certificate' certificate.0 %}">{{ certificate.1 }}</a>
                         </li>
                     {% endfor %}
                     </ul>
@@ -66,7 +66,7 @@
                     <ul>
                     {% for domain in result.Domain %}
                         <li>
-                            <a href="{% url 'crits.core.views.details' 'Domain' domain.0 %}">{{ domain.1 }}</a>
+                            <a href="{% url 'crits-core-views-details' 'Domain' domain.0 %}">{{ domain.1 }}</a>
                         </li>
                     {% endfor %}
                     </ul>
@@ -78,7 +78,7 @@
                     <ul>
                     {% for email in result.Email %}
                         <li>
-                            <a href="{% url 'crits.core.views.details' 'Email' email.0 %}">{{ email.1 }}</a>
+                            <a href="{% url 'crits-core-views-details' 'Email' email.0 %}">{{ email.1 }}</a>
                         </li>
                     {% endfor %}
                     </ul>
@@ -90,7 +90,7 @@
                     <ul>
                     {% for indicator in result.Indicator %}
                         <li>
-                            <a href="{% url 'crits.core.views.details' 'Indicator' indicator.0 %}">{{ indicator.1 }}</a>
+                            <a href="{% url 'crits-core-views-details' 'Indicator' indicator.0 %}">{{ indicator.1 }}</a>
                         </li>
                     {% endfor %}
                     </ul>
@@ -102,7 +102,7 @@
                     <ul>
                     {% for ip in result.IP %}
                         <li>
-                            <a href="{% url 'crits.core.views.details' 'IP' ip.0 %}">{{ ip.1 }}</a>
+                            <a href="{% url 'crits-core-views-details' 'IP' ip.0 %}">{{ ip.1 }}</a>
                         </li>
                     {% endfor %}
                     </ul>
@@ -114,7 +114,7 @@
                     <ul>
                     {% for pcap in result.PCAP %}
                         <li>
-                            <a href="{% url 'crits.core.views.details' 'PCAP' pcap.0 %}">{{ pcap.1 }}</a>
+                            <a href="{% url 'crits-core-views-details' 'PCAP' pcap.0 %}">{{ pcap.1 }}</a>
                         </li>
                     {% endfor %}
                     </ul>
@@ -126,7 +126,7 @@
                     <ul>
                     {% for rd in result.RawData %}
                         <li>
-                            <a href="{% url 'crits.core.views.details' 'RawData' rd.0 %}">{{ rd.1 }}</a>
+                            <a href="{% url 'crits-core-views-details' 'RawData' rd.0 %}">{{ rd.1 }}</a>
                         </li>
                     {% endfor %}
                     </ul>
@@ -138,7 +138,7 @@
                     <ul>
                     {% for sample in result.Sample %}
                         <li>
-                            <a href="{% url 'crits.core.views.details' 'Sample' sample.0 %}">{{ sample.1 }}</a>
+                            <a href="{% url 'crits-core-views-details' 'Sample' sample.0 %}">{{ sample.1 }}</a>
                         </li>
                     {% endfor %}
                     </ul>
@@ -150,7 +150,7 @@
                     <ul>
                     {% for signature in result.Signature %}
                         <li>
-                            <a href="{% url 'crits.core.views.details' 'Signature' signature.0 %}">{{ signature.1 }}</a>
+                            <a href="{% url 'crits-core-views-details' 'Signature' signature.0 %}">{{ signature.1 }}</a>
                         </li>
                     {% endfor %}
                     </ul>
