--- a/taxii_service/templates/taxii_service_nav_items.html
+++ b/taxii_service/templates/taxii_service_nav_items.html
@@ -1,7 +1,7 @@
 
 <li class='mmenu_item'>
-    <a href="{% url 'taxii_service.views.taxii_poll' %}">TAXII Agent</a>
+    <a href="{% url 'taxii_service-views-taxii_poll' %}">TAXII Agent</a>
 </li>
 <li class='mmenu_item'>
-    <a href="{% url 'taxii_service.views.stix_upload' %}">STIX Upload</a>
+    <a href="{% url 'taxii_service-views-stix_upload' %}">STIX Upload</a>
 </li>
