--- a/threatexchange/templates/privacy_form.html
+++ b/threatexchange/templates/privacy_form.html
@@ -2,7 +2,7 @@
     <div id="form_privacy_member_list" style="float: right;">
     </div>
     <form id="form-add-edit-privacy-group" 
-	  action='{% url "threatexchange.views.add_edit_privacy_group" %}' 
+	  action='{% url "threatexchange-views-add_edit_privacy_group" %}' 
 	  method='POST' enctype="multipart/form-data" 
       data-id="">
         <table class="form" width="400px">
