--- a/data_miner_service/templates/data_miner_service_template.html
+++ b/data_miner_service/templates/data_miner_service_template.html
@@ -29,7 +29,7 @@
             'ind_type': ind_type,
             'obj_type': otype
         };
-        url = "{% url 'crits.indicators.views.indicator_from_tlo' %}";
+        url = "{% url 'crits-indicators-views-indicator_from_tlo' %}";
         $.ajax({
             type: "POST",
             url: url,
@@ -135,16 +135,16 @@
             <td class="ui-icon ui-icon-pencil edit_raw_indicator" data-type="{{ result.Type }}" data-val="{{result.result}}"></td>
             <td class="potential_indicator">
                 {% if result.result %}
-                <a class="potential_link" href="{% url 'crits.core.views.global_search_listing' %}?search_type=global&q={{result.result|urlencode}}">{{result.result}}</a>
+                <a class="potential_link" href="{% url 'crits-core-views-global_search_listing' %}?search_type=global&q={{result.result|urlencode}}">{{result.result}}</a>
                 {% endif %}
             </td>
             <td>
                 <span class="indicator_exists">
                     {% if result.exists %}
-                        {% if result_subtype.grouper = "Potential Samples" %}
-                        <a href="{% url 'crits.core.views.details' 'Sample' result.exists %}">Existed</a>
+                        {% if result_subtype.grouper == "Potential Samples" %}
+                        <a href="{% url 'crits-core-views-details' 'Sample' result.exists %}">Existed</a>
                         {% else %}
-                        <a href="{% url 'crits.indicators.views.indicator' result.exists %}">Existed</a>
+                        <a href="{% url 'crits-indicators-views-indicator' result.exists %}">Existed</a>
                         {% endif %}
                     {% endif %}
                 </span>
