--- a/macro_extract_service/templates/macro_extract_template.html
+++ b/macro_extract_service/templates/macro_extract_template.html
@@ -23,7 +23,7 @@
         <tr>
             <td>
                 {% if result.result %}
-                <a href="{% url 'crits.core.views.global_search_listing' %}?search_type=global&q={{result.result|urlencode}}&force_full=1">{{result.result}}</a>
+                <a href="{% url 'crits-core-views-global_search_listing' %}?search_type=global&q={{result.result|urlencode}}&force_full=1">{{result.result}}</a>
                 {% endif %}
             </td>
             {% for key, value in result.items %}
@@ -31,7 +31,7 @@
                 {% if key == 'RawData TLO ID' %}
                     <td>
                     {% if value %}
-                    <a href="{% url 'crits.core.views.details' 'RawData' value %}">{{value}}</a>
+                    <a href="{% url 'crits-core-views-details' 'RawData' value %}">{{value}}</a>
                     {% endif %}
                     </td>
                 {% else %}
