--- a/stix_validator_service/templates/stix_validator_service_nav_items.html
+++ b/stix_validator_service/templates/stix_validator_service_nav_items.html
@@ -1,4 +1,4 @@
 
 <li class='mmenu_item'>
-    <a href="{% url 'stix_validator_service.views.stix_validator' %}">STIX Validator</a>
+    <a href="{% url 'stix_validator_service-views-stix_validator' %}">STIX Validator</a>
 </li>
