--- a/taxii_service/templates/import_results.html
+++ b/taxii_service/templates/import_results.html
@@ -12,7 +12,7 @@
                         {{item.0}}
                     </td>
                     <td>
-                        <a href="{% url 'crits.core.views.details' item.0 item.1 %}">{{item.1}}</a>
+                        <a href="{% url 'crits-core-views-details' item.0 item.1 %}">{{item.1}}</a>
                     </td>
                 </tr>
             {% endfor %}
