--- a/threatexchange/templates/threatexchange_nav_items.html
+++ b/threatexchange/templates/threatexchange_nav_items.html
@@ -1,8 +1,8 @@
 <li class='mmenu_item'>
-    <a href="{% url 'threatexchange.views.query' %}">ThreatExchange Query</a>
+    <a href="{% url 'threatexchange-views-query' %}">ThreatExchange Query</a>
     <ul class='sub-mmenu'>
         <li class='mmenu_item'>
-            <a href="{% url 'threatexchange.views.privacy_groups' %}">Privacy Group Manager</a>
+            <a href="{% url 'threatexchange-views-privacy_groups' %}">Privacy Group Manager</a>
         </li>
     </ul>
 </li>
