--- a/threatgrid_service/templates/tg_service_template.html
+++ b/threatgrid_service/templates/tg_service_template.html
@@ -9,7 +9,7 @@
             'ind_type': ind_type,
             'obj_type': otype
         };
-        url = "{% url 'crits.indicators.views.indicator_from_tlo' %}";
+        url = "{% url 'crits-indicators-views-indicator_from_tlo' %}";
         $.ajax({
             type: "POST",
             url: url,
@@ -116,13 +116,13 @@
                 <td class="ui-icon ui-icon-pencil edit_raw_indicator" data-type="{{ result.Type }}"></td>
                 <td class="potential_indicator">
                     {% if result.result %}
-                    <a class="potential_link" href="{% url 'crits.core.views.global_search_listing' %}?search_type=global&q={{result.result|urlencode}}">{{result.result}}</a>
+                    <a class="potential_link" href="{% url 'crits-core-views-global_search_listing' %}?search_type=global&q={{result.result|urlencode}}">{{result.result}}</a>
                     {% endif %}
                 </td>
                 <td>
                     <span class="indicator_exists" style="float:left;">
                         {% if result.exists %}
-                            <a href="{% url 'crits.indicators.views.indicator' result.exists %}">Existed</a>
+                            <a href="{% url 'crits-indicators-views-indicator' result.exists %}">Existed</a>
                         {% endif %}
                     </span>
                 </td>
@@ -152,7 +152,7 @@
             <tr>
                 <td>
                     {% if result.result %}
-                    <a href="{% url 'crits.core.views.global_search_listing' %}?search_type=global&q={{result.result|urlencode}}&force_full=1">{{result.result}}</a>
+                    <a href="{% url 'crits-core-views-global_search_listing' %}?search_type=global&q={{result.result|urlencode}}&force_full=1">{{result.result}}</a>
                     {% endif %}
                 </td>
                 {% for key, value in result.items %}
@@ -160,7 +160,7 @@
                     {% if key == 'md5' %}
                         <td>
                         {% if value %}
-                        <a href="{% url 'crits.core.views.global_search_listing' %}?search_type=global&q={{value}}">{{value}}</a>
+                        <a href="{% url 'crits-core-views-global_search_listing' %}?search_type=global&q={{value}}">{{value}}</a>
                         {% endif %}
                         </td>
                     {% else %}
