--- a/prettythings/templates/pt_main.html
+++ b/prettythings/templates/pt_main.html
@@ -13,6 +13,8 @@
         <span style="float: right;" class="ui-icon ui-icon-triangle-1-s collapsible"></span>
     </h3>
     <div class="content_body">
+        <a href="{% url 'prettythings.views.campaign_heatmap' %}">Campaign
+            Heatmap</a>
     </div>
 </div>
 
