Add some comments and make heatmap look better.

--- a/prettythings/templates/pt_campaign_heatmap.html
+++ b/prettythings/templates/pt_campaign_heatmap.html
@@ -38,8 +38,9 @@
     }
 
     tr#campaigns > td {
-        height: 100px;
-        max-width: 30px;
+        height: 200px;
+        width: auto;
+        padding: 0px;
     }
 
     .rotate {
