Remove ThreatType from export.
ThreatExchange no longer supports ThreatType or AttackType. Removing
ThreatType from export and instead adding both Threat and Attack types
as tags on export.

--- a/threatexchange/templates/threatexchange_export_indicator_tab.html
+++ b/threatexchange/templates/threatexchange_export_indicator_tab.html
@@ -14,9 +14,6 @@
     #tx_type_warn {
         display: inline-block;
     }
-    #tx_threat_type_warn {
-        display: inline-block;
-    }
 </style>
 <div id="threatexchange_export" width="50%">
     <div class='threatexchange_members content_box content_details'>
@@ -63,15 +60,6 @@
                         </select>
                         <span id="tx_type_warn" class="ui-icon ui-icon-alert"
                             title="Indicator type was not a valid Type for ThreatExchange"></span>
-                    </td>
-                </tr>
-                <tr id="threat_type_row">
-                    <td>
-                        Threat Type
-                    <td>
-                        <select id="tx_threat_type" name="tx_threat_type">
-                        </select>
-                        <span id="tx_threat_type_warn" class="ui-icon ui-icon-alert" title="Indicator threat type was not a valid Threat Type for ThreatExchange"></span> </td>
                     </td>
                 </tr>
                 <tr id="description_row">
@@ -183,10 +171,9 @@ $(document).ready(function() {
             var severity = data.severity;
             var share_level = data.share_level;
             var status = data.status;
-            var threat_type = data.threat_type;
             var types = data.types;
             var t = "{{ indicator.ind_type }}".toUpperCase().replace(' ', '_');
-            var tt = "{{ indicator.threat_types.0 }}".toUpperCase().replace(' ', '_');
+            var tags = '{{ indicator.threat_types|join:"," }},{{ indicator.attack_types|join:"," }}';
             for (var i=0; i < precision.length; i++) {
                 $('#tx_precision').append($('<option>', {
                     value: precision[i],
@@ -223,18 +210,6 @@ $(document).ready(function() {
                     text : status[i]
                 }));
             }
-            for (var i=0; i < threat_type.length; i++) {
-                $('#tx_threat_type').append($('<option>', {
-                    value: threat_type[i],
-                    text : threat_type[i]
-                }));
-            }
-            if ($("#tx_threat_type option[value='" + tt + "']").length > 0) {
-                $("#tx_threat_type option[value='" + tt + "']").prop('selected', true);
-                $("#tx_threat_type_warn").hide();
-            } else {
-                $("#tx_export_submit").prop('disabled', true);
-            }
             for (var i=0; i < types.length; i++) {
                 $('#tx_type').append($('<option>', {
                     value: types[i],
@@ -252,6 +227,7 @@ $(document).ready(function() {
             $("#tx_review_status").val("UNKNOWN");
             $("#tx_precision").val("UNKNOWN");
             $("#tx_share_level").val("UNKNOWN");
+            $("#tx_tags").val(tags);
             $("#tx_privacy_type").val("HAS_WHITELIST");
             ci = {
                  unknown: 0,
@@ -281,7 +257,7 @@ $(document).ready(function() {
             }
         }
     });
-    $(document).on('change', '#tx_type, #tx_threat_type', function(e) {
+    $(document).on('change', '#tx_type', function(e) {
         $("#tx_export_submit").prop('disabled', false);
 
     });
@@ -296,7 +272,6 @@ $(document).ready(function() {
              oid: "{{ indicator.id }}",
              indicator: $('#tx_indicator').val(),
              type: $('#tx_type').val(),
-             threat_type: $('#tx_threat_type').val(),
              description: $('#tx_description').val(),
              status: $('#tx_status').val(),
              confidence: $('#tx_confidence').val(),
