--- a/relationships_service/templates/relationships_service_all_tab.html
+++ b/relationships_service/templates/relationships_service_all_tab.html
@@ -1,17 +1,27 @@
-{% load url from future %}
 
-<script src="/js/d3.v2.min.js"></script>
-<script>
+
+<!-- vis.js components -->
+<link href="/css/vis.min.css" rel="stylesheet" type="text/css" />
+<script src="/js/vis.min.js"></script>
+<!-- vis.js components -->
+
+<script type="text/javascript">
 
 $(document).ready(function() {
     $('#draggable').draggable();
     $('#graph_config').draggable();
     $('#graph_actions').draggable();
+    $('#obj_details').draggable();
+
     // default graph lists
     var nodes = [];
     var links = [];
-    //var labelAnchors = []; // used if we want to do force labels
-    //var labelAnchorLinks = []; // used if we want to do force labels
+
+    // var to hold the network graph object
+    var network = null;
+    var visjs_data = {};
+
+    $('#node_types').on('change', function() { $('#change_graph').trigger('click'); });
 
     $(document).on('click', '#change_graph', function(e) {
         $('#graph_container').empty();
@@ -32,8 +42,6 @@ $(document).ready(function() {
                 if (data.success) {
                     nodes = data.message.nodes;
                     links = data.message.links;
-                    // labelAnchors = data.message.labelAnchors;
-                    // labelAnchorLinks = data.message.labelAnchorLinks;
                 }
             }
         });
@@ -92,142 +100,18 @@ $(document).ready(function() {
 
     function generate_graph(nodes, links) {
 
-        // define our graph and add to page
-        var w = 1000, h = 800;
-
-        var svg = d3.select("#svg_container > svg")
-        .attr("preserveAspectRatio", "xMidYMid meet")
-        .attr('width', w)
-        .attr('height', h)
-        .append('svg:g')
-        .call(d3.behavior.zoom().on("zoom", redraw))
-        .append('svg:g');
-
-        svg.append('svg:rect')
-        .attr('width', w)
-        .attr('height', h)
-        .attr('fill', 'white');
-
-        // define our forces
-        // force: node linking
-        var force = d3.layout.force()
-                    .nodes(nodes)
-                    .links(links)
-                    .size([w, h])
-                    .gravity(1)
-                    .linkDistance(500)
-                    .charge(-4000)
-                    .linkStrength(function(x) {
-                        return x.weight * 10;
-                    })
-                    .on("tick", tick)
-                    .start();
-
-        var link = svg.selectAll("line.link")
-                   .data(links)
-                   .enter()
-                   .append("svg:line")
-                   .attr("class", "link")
-                   .style("stroke", "#CCC");
-
-        var node = svg.selectAll(".node")
-                   .data(nodes)
-                   .enter()
-                   .append("g")
-                   .attr("class", "node")
-                // .on("mouseover", mouseover)
-                // .on("mouseout", mouseout)
-		   .on("mouseover", function(d){
-			link.style('stroke', function(l){
-				if (d === l.source || d === l.target)
-					return "#FF0000";
-				else
-					return "#CCC";
-					//return "#00FF26";
-			})
-		   })
-		   .on("mouseout", function(d){link.style('stroke', "#CCC")})
-                   .call(force.drag);
-
-        node.append("circle")
-            .attr("r", 8)
-            .style('stroke', '#CCC')
-            .style("fill", function(d) {
-                return d.color;
-            });
-
-        //node.append("text")
-        //    .attr("x", 12)
-        //    .attr("dy", ".35em")
-        //    .text(function(d) { return d.label; });
-        node.append("svg:a")
-        .attr("xlink:href", function(d) {
-            return d.url;
-        })
-        .append("svg:text")
-        .text(function(d) {
-            if (d.visible) {
-                if (d.campaign) {
-                    return d.label + " (" + d.campaign + ")";
-                } else {
-                    return d.label;
-                }
-            }
-        })
-        .style("fill", "#3399ff")
-        .style("font-family", "Arial")
-        .style("font-size", 12)
-        .attr("x", 12)
-        .attr("dy", ".35em");
-
-        function redraw() {
-            svg.attr("transform",
-                "translate(" + d3.event.translate + ")"
-                + " scale(" + d3.event.scale + ")");
+        var visjs_options = {
+            nodes: {borderWidth: 2, shadow: true},
+            edges: {width: 1,       shadow: true},
+            height: "800",
+            width: "1000"
         }
 
-        function tick() {
-          link
-              .attr("x1", function(d) { return d.source.x; })
-              .attr("y1", function(d) { return d.source.y; })
-              .attr("x2", function(d) { return d.target.x; })
-              .attr("y2", function(d) { return d.target.y; });
+        var visjs_container = document.getElementById('graph_container');
 
-          node
-              .attr("transform", function(d) { return "translate(" + d.x + "," + d.y + ")"; });
-        }
-
-        function mouseover() {
-          d3.select(this).select("circle").transition()
-              .duration(350)
-              .attr("r", 16);
-	  //NMD
-	  //d3.select(this).select("line").transition()
-	  //   .duration(350)
-	  //    .style('stroke', '#FF3333');
-	  //NMD
-	  //function(d) {
-	 //	function(l){
-	//	if (d === l.source || d === l.target)
-	//	  return link.style('stroke', '#FF3333');
-	//	else
-	//	  return link.style('stroke', '#CCC');
-	//   	 })
-	//    }
-        }
-
-        function mouseout() {
-          d3.select(this).select("circle").transition()
-              .duration(350)
-              .attr("r", 8);
-	  
-	  //NMD
-	  //d3.select(this).select("line").transition()
-	  //    .duration(350)
-	  //    .style('stroke', '#CCC');
-	  //NMD
-	    link.style('stroke', '#CCC');
-        }
+        var data_dump = "";
+        visjs_data = {nodes: new vis.DataSet(nodes), edges: new vis.DataSet(links)};
+        network = new vis.Network(visjs_container, visjs_data, visjs_options);
 
         $('#draggable').show()
         .css({'position': 'absolute', 'top': 60, 'left' : 20});
@@ -235,7 +119,33 @@ $(document).ready(function() {
         .css({'position': 'absolute', 'top': 60, 'right' : 20});
         $('#graph_actions').show()
         .css({'position': 'absolute', 'top': 275, 'right' : 20});
-    }
+        $('#obj_details').show()
+        .css({'position': 'absolute', 'top': 500, 'left' : 20});
+
+        // Configure vis.js events
+        network.on('selectNode', update_details);
+
+        // Reset the "details" box
+        $('#obj_details').html('<p><b>Details:</b></p>');
+    };
+
+    function update_details(obj) {
+        var selected_nodes = obj['nodes'];
+
+        // If the selection contains more than one node, or no nodes, then ignore
+        if(selected_nodes.length != 1) {
+           $('#obj_details').html('<p><b>Details:</b></p>');
+           return;
+        }
+
+        var selected_node_data = visjs_data['nodes'].get({filter: function(e, i, a) { return selected_nodes[0] == e['id']; }});
+        var html_details = "<p><b>Details:</b></p><p><ul>";
+        html_details += "<li>Type: " + selected_node_data[0]['group'] + "</li>";
+        html_details += "<li>Link: <a target=\"blank\" href=\"" + selected_node_data[0]['url'] + "\">" + selected_node_data[0]['id'] + "</a></li>";
+        html_details += "<li>Status: " + selected_node_data[0]['crits_status'] + "</li>";
+        html_details += "</ul></p>";
+        $('#obj_details').html(html_details);
+    };
 
 });
 
@@ -256,10 +166,18 @@ $(document).ready(function() {
     z-index: 5;
     float: right;
 }
-#svg_container {
+#obj_details {
+    width: 300px;
+    height: 200px;
+    z-index: 5;
+    float: left;
+}
+#graph_container {
     border: 1px solid #CCCCCC;
     margin-left: 150px;
     margin-right: 150px;
+    width: 800,
+    height: 1000
 }
 #graph_legend {
     margin-left: -15px;
@@ -267,8 +185,7 @@ $(document).ready(function() {
 </style>
 
 <div id="relationships_service" width="100%">
-    <div id="svg_container">
-        <svg id="graph_container"></svg>
+    <div id="graph_container">
     </div>
     <div id="graph_config" class="ui-widget-content" style="display: none;">
         <div style="vertical-align: top; padding-top: 8px;">Depth:
@@ -276,11 +193,13 @@ $(document).ready(function() {
         </div>
         <select id="node_types" name="types" size=11 multiple>
             <option value="Actor" selected="selected">Actors</option>
+            <option value="Backdoor" selected="selected">Backdoors</option>
             <option value="Campaign" selected="selected">Campaigns</option>
             <option value="Certificate" selected="selected">Certificates</option>
             <option value="Domain" selected="selected">Domains</option>
             <option value="Email" selected="selected">Emails</option>
             <option value="Event" selected="selected">Events</option>
+            <option value="Exploit" selected="selected">Exploit</option>
             <option value="Indicator" selected="selected">Indicators</option>
             <option value="IP" selected="selected">IPs</option>
             <option value="PCAP" selected="selected">PCAPs</option>
@@ -304,11 +223,13 @@ $(document).ready(function() {
     <div id="draggable" class="ui-widget-content" style="display: none;">
         <ul id="graph_legend">
             <li style="color: #900C0C;"><span style="color: #000;">Actors</span></li>
+            <li style="color: #5A2C75;"><span style="color: #000;">Backdoors</span></li>
             <li style="color: #FF3737;"><span style="color: #000;">Campaigns</span></li>
             <li style="color: #FFA837;"><span style="color: #000;">Certificates</span></li>
             <li style="color: #33EB33;"><span style="color: #000;">Domains</span></li>
             <li style="color: #FF8989;"><span style="color: #000;">Emails</span></li>
             <li style="color: #B05151;"><span style="color: #000;">Events</span></li>
+            <li style="color: #8CA336;"><span style="color: #000;">Exploits</span></li>
             <li style="color: #B08751;"><span style="color: #000;">Indicators</span></li>
             <li style="color: #90570C;"><span style="color: #000;">IPs</span></li>
             <li style="color: #FFCC89;"><span style="color: #000;">PCAPs</span></li>
@@ -316,5 +237,8 @@ $(document).ready(function() {
             <li style="color: #8CCBF8;"><span style="color: #000;">Samples</span></li>
             <li style="color: #4AA24A;"><span style="color: #000;">Targets</span></li>
         </ul>
+    </div>
+    <div id="obj_details" class="ui-widget-content" style="display: none;">
+     <p><b>Details:</b></p>
     </div>
 </div>
